# pdf-toolbox

./: .gitignore  README.md  pdf-toolbox.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pdftoolbox/: __init__.py  __main__.py  app.py  cli.py  main_window.py
pdftoolbox/core/: decrypt.py  encrypt.py  exceptions.py  merge.py  metadata.py  pageparse.py  split.py  validation.py
pdftoolbox/tools/: base.py  merger_tool.py  metadata_tool.py  secure_tool.py  splitter_tool.py  unsecure_tool.py  widget_helpers.py
tests/: helpers.py  test_cli.py  test_encrypt_decrypt.py  test_merge.py  test_metadata.py  test_pageparse.py  test_split.py  test_validation.py
